--- a/index.html
+++ b/index.html
@@ -472,21 +472,21 @@
     <div class="container">
         <div class="header">
             <h1>🍖 Cuentas Claras</h1>
-            <p>División justa de gastos para tu asado</p>
+            <p>Te Ayuda a Dividir Los Gastos Para tu Asado o Reunión</p>
         </div>
 
         <div class="content">
             <div class="step">
-                <h3><span class="step-number">1</span> ¿Cuántas personas participaron?</h3>
+                <h3><span class="step-number">1</span> ¿Cuántas Personas Participarán o Participaron?</h3>
                 <div class="input-group">
-                    <label for="cantidad">Número de personas:</label>
+                    <label for="cantidad">Número de Personas:</label>
                     <input type="number" id="cantidad" min="2" max="20" placeholder="Ej: 5">
                 </div>
                 <button class="btn" onclick="crearFormulario(this)">Siguiente</button>
             </div>
 
             <div class="step personas-container" id="personasContainer">
-                <h3><span class="step-number">2</span> Ingresa los datos de cada persona</h3>
+                <h3><span class="step-number">2</span> Ingresa Los Datos de Cada Persona</h3>
                 <div id="personasForm"></div>
                 <button class="btn btn-secondary" onclick="calcularDivision(this)">Calcular División</button>
             </div>
