modifique texto e iconos

--- a/index.html
+++ b/index.html
@@ -502,14 +502,14 @@
     <div class="container">
         <div class="header">
             <h1>🍖 Cuentas Claras</h1>
-            <p>División justa de gastos para tu asado</p>
+            <p>La Cuenta Justa Para tu Asado o Reunión</p>
         </div>
 
         <div class="content">
             <div class="step">
-                <h3><span class="step-number">1</span> ¿Cuántas personas participaron?</h3>
+                <h3><span class="step-number">1</span> ¿Cuántas Personas Participaron?</h3>
                 <div class="input-group">
-                    <label for="cantidad">Número de personas:</label>
+                    <label for="cantidad">Número de Personas:</label>
                     <input type="number" id="cantidad" min="2" max="20" placeholder="Ej: 5">
                 </div>
                 <button class="btn" onclick="crearFormulario(this)">Siguiente</button>
