modifique texto e iconos

--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
             </div>
 
             <div class="step personas-container" id="personasContainer">
-                <h3><span class="step-number">2</span> Ingresa los datos de cada persona</h3>
+                <h3><span class="step-number">2</span> Ingresa los Datos de Cada Persona</h3>
                 <div id="personasForm"></div>
                 <button class="btn btn-secondary" onclick="calcularDivision(this)">Calcular División</button>
             </div>
