--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
 
     <script>
         let personas = [];
-
+        /*
         // Forzar recarga sin cache
         function forzarRecargaSinCache() {
             // Versión de la app para forzar actualizaciones
@@ -562,7 +562,8 @@
 
         // Ejecutar al cargar
         forzarRecargaSinCache();
-
+        */
+       /*
         // Detectar actualizaciones del Service Worker
         if ('serviceWorker' in navigator) {
             navigator.serviceWorker.addEventListener('controllerchange', () => {
@@ -570,7 +571,7 @@
                 location.reload(true);
             });
         }
-
+        */
         function mostrarLoading(button) {
             const originalText = button.innerHTML;
             button.innerHTML = '<span class="loading"></span> Procesando...';
@@ -787,33 +788,15 @@
             }
         });
 
-        // PWA Service Worker con control de versiones
+        // PWA Service Worker
         if ('serviceWorker' in navigator) {
-            window.addEventListener('load', function() {
-                navigator.serviceWorker.register('./sw.js?v=' + Date.now())
-                    .then(function(registration) {
-                        console.log('SW registered: ', registration);
-                        
-                        // Verificar actualizaciones cada 30 segundos
-                        setInterval(() => {
-                            registration.update();
-                        }, 30000);
-                        
-                        registration.addEventListener('updatefound', () => {
-                            const newWorker = registration.installing;
-                            newWorker.addEventListener('statechange', () => {
-                                if (newWorker.state === 'installed') {
-                                    if (navigator.serviceWorker.controller) {
-                                        // Nueva versión disponible
-                                        if (confirm('¡Nueva versión disponible! ¿Quieres actualizar?')) {
-                                            window.location.reload(true);
-                                        }
-                                    }
-                                }
-                            });
-                        });
-                    }, function(registrationError) {
-                        console.log('SW registration failed: ', registrationError);
+            window.addEventListener('load', () => {
+                navigator.serviceWorker.register('./sw.js')
+                    .then(registration => {
+                        console.log('SW registrado con éxito:', registration);
+                    })
+                    .catch(error => {
+                        console.log('Fallo en el registro del SW:', error);
                     });
             });
         }
