--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@
                         <div class="persona-inputs">
                             <div>
                                 <label>👤 Nombre:</label>
-                                <input type="text" id="nombre${i}" placeholder="Ej: JUAN" required oninput="this.value = this.value.toUpperCase()">
+                                <input type="text" id="nombre${i}" placeholder="Ej: ERNESTO" required oninput="this.value = this.value.toUpperCase()">
                             </div>
                             <div>
                                 <label>💰 Importe gastado ($):</label>
