--- a/index.html
+++ b/index.html
@@ -542,27 +542,33 @@
         </div>
     </div>
 
-    <script>
+        <script>
         let personas = [];
 
-        // Forzar recarga sin cache
+        // Evita recarga infinita usando sessionStorage
         function forzarRecargaSinCache() {
             const VERSION_APP = '2.2.0';
             const versionGuardada = localStorage.getItem('app_version');
             
             if (versionGuardada !== VERSION_APP) {
                 localStorage.setItem('app_version', VERSION_APP);
-                if (versionGuardada !== null) {
-                    location.reload(true);
+
+                // Solo recarga si no lo has hecho en esta sesión
+                if (versionGuardada !== null && !sessionStorage.getItem('recargado')) {
+                    sessionStorage.setItem('recargado', 'true');
+                    location.reload();
                 }
             }
         }
-
         forzarRecargaSinCache();
 
+        // Service Worker: recarga solo una vez por sesión
         if ('serviceWorker' in navigator) {
             navigator.serviceWorker.addEventListener('controllerchange', () => {
-                location.reload(true);
+                if (!sessionStorage.getItem('recargadoSW')) {
+                    sessionStorage.setItem('recargadoSW', 'true');
+                    location.reload();
+                }
             });
         }
 
@@ -791,7 +797,7 @@
                                 if (newWorker.state === 'installed') {
                                     if (navigator.serviceWorker.controller) {
                                         if (confirm('¡Nueva versión disponible! ¿Quieres actualizar?')) {
-                                            window.location.reload(true);
+                                            window.location.reload();
                                         }
                                     }
                                 }
